--- a/quickstart/build.gradle
+++ b/quickstart/build.gradle
@@ -1,10 +1,19 @@
 apply plugin: 'java'
+apply plugin: "jacoco"
 
 version = '1.0'
 jar {
     manifest {
         attributes 'Implementation-Title': 'Gradle Quickstart',
                    'Implementation-Version': version
+    }
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.destination file("${buildDir}/jacocoHtml")
     }
 }
 
