some changes in command

--- a/GoCD/webapp.gocd.yaml
+++ b/GoCD/webapp.gocd.yaml
@@ -31,7 +31,7 @@ pipelines:
                     command: ./quickstart/gradlew
                     arguments:
                       - clean
-                      - tests
+                      - test
                       - -p
                       - quickstart
                 artifacts:
