--- a/GoCD/webapp.gocd.yaml
+++ b/GoCD/webapp.gocd.yaml
@@ -5,8 +5,8 @@ pipelines:
     group: TEST
     materials:
       repo:
-        git: https://github.com/JimmyRomero/JR.git
-        branch: task7_fixed
+        git: https://github.com/devops-at06/JR.git
+        branch: master
     stages:
       - Build:
           jobs:
