--- a/GoCD/webapp.gocd.yaml
+++ b/GoCD/webapp.gocd.yaml
@@ -5,8 +5,8 @@ pipelines:
     group: TEST
     materials:
       repo:
-        git: https://github.com/devops-at06/JR.git
-        branch: master
+        git: https://github.com/JimmyRomero/JR.git
+        branch: task9
     stages:
       - Build:
           jobs:
@@ -43,4 +43,14 @@ pipelines:
                     destination: xml                    
               tabs:
                 unit_test: html/index.html
+      - CodeQuality:
+          jobs:
+            Check:
+              tasks:
+                - exec:
+                    command: ./quickstart/gradlew
+                    arguments:
+                      - sonarqube
+                      - -p
+                      - quickstart/
                 
