--- a/webapp-quickstart/deploy.gradle
+++ b/webapp-quickstart/deploy.gradle
@@ -15,6 +15,7 @@ task deploy {
     ssh.run {
       session(remotes.webServer) {        
         put from: 'build/libs/webapp-quickstart.war', into: '/opt/tomcat/webapps'
+        execute 'sudo service tomcat restart'
       }
     }
   }
