updates in gradle.properties and deploy.gradle

--- a/webapp-quickstart/gradle.properties
+++ b/webapp-quickstart/gradle.properties
@@ -1,1 +1,6 @@
-systemProp.key.path=
+key_path=
+tomcat_webapps=/opt/tomcat/webapps
+war_path=build/libs
+war_name=webapp-quickstart
+dev_server=
+user_server=ubuntu
