--- a/GoCD/webapp.gocd.yaml
+++ b/GoCD/webapp.gocd.yaml
@@ -2,11 +2,11 @@ format_version: 3
 pipelines:  
   jr-java-quickstart:
     lock_behavior: lockOnFailure
-    group: TEST
+    group: Application
     materials:
       repo:
-        git: https://github.com/JimmyRomero/JR.git
-        branch: task9
+        git: https://github.com/devops-at06/JR.git
+        branch: master
     stages:
       - Build:
           jobs:
@@ -21,8 +21,8 @@ pipelines:
                       - "quickstart/"
               artifacts:
                 - build:
-                    source: quickstart/build/libs/*.jar
-                    destination: Build
+                    source: quickstart/build/libs/war
+                    destination: war
       - Test:
           jobs:
             Unit_Test:
@@ -31,7 +31,7 @@ pipelines:
                     command: ./quickstart/gradlew
                     arguments: 
                       - clean
-                      - test
+                      - tests
                       - -p
                       - quickstart/                      
               artifacts:
@@ -43,14 +43,60 @@ pipelines:
                     destination: xml                    
               tabs:
                 unit_test: html/index.html
-      - CodeQuality:
+     
+  jr-java-quickstart:
+    lock_behavior: lockOnFailure
+    group: Application
+    materials:
+      repo:
+        git: https://github.com/devops-at06/JR.git
+        branch: master
+    stages:
+      - Commit:
           jobs:
-            Check:
+            building:
               tasks:
                 - exec:
-                    command: ./quickstart/gradlew
+                    command: ./webapp-quickstart/gradlew
                     arguments:
-                      - sonarqube
+                      - "clean"
+                      - "assemble"
+                      - "-p"
+                      - "webapp-quickstart"
+              artifacts:
+                - build:
+                    source: webapp-quickstart/build/libs/war
+                    destination: war
+      - Test:
+          jobs:
+            Unit_Test:
+              tasks:
+                - exec:
+                    command: ./webapp-quickstart/gradlew
+                    arguments:                       
+                      - tests
                       - -p
-                      - quickstart/
-                
+                      - webapp-quickstart                      
+              artifacts:
+                - build:
+                    source: webapp-quickstart/build/reports/tests/test/**/*
+                    destination: html
+                - test:
+                    source: webapp-quickstart/build/test-results/test/*.xml
+                    destination: xml                    
+              tabs:
+                unit_test: html/index.html
+      - Deploy:
+          jobs:
+            Application:
+              tasks:
+                - exec:
+                    command: ./webapp-quickstart/gradlew
+                    arguments:
+                      - -b
+                      - -webapp-quickstart/deploy.gradle
+                      - deploy
+                      - Pdev_server=10.28.109.116
+                      - -p
+                      - webapp-quickstart
+                      
