--- a/GoCD/webapp.gocd.yaml
+++ b/GoCD/webapp.gocd.yaml
@@ -44,13 +44,13 @@ pipelines:
               tabs:
                 unit_test: html/index.html
      
-  jr-java-quickstart:
+  jr-java-webapp-quickstart-build:
     lock_behavior: lockOnFailure
     group: Application
     materials:
       repo:
-        git: https://github.com/devops-at06/JR.git
-        branch: master
+        git: https://github.com/JimmyRomero/JR.git
+        branch: practice_deploy3
     stages:
       - Commit:
           jobs:
