gocd file updated

--- a/GoCD/webapp.gocd.yaml
+++ b/GoCD/webapp.gocd.yaml
@@ -43,7 +43,17 @@ pipelines:
                     destination: xml                    
               tabs:
                 unit_test: html/index.html
-     
+      - Code_Quality:
+          jobs:
+            Sonarqube:
+              tasks:
+                - exec:
+                    command: ./quickstart/gradlew
+                    arguments:
+                      - sonarqube
+                      - -p
+                      - quickstart
+
   jr-java-webapp-quickstart-build:
     lock_behavior: lockOnFailure
     group: Application
@@ -51,6 +61,8 @@ pipelines:
       repo:
         git: https://github.com/JimmyRomero/JR.git
         branch: practice_deploy3
+        whitelist:
+          - webapp-quickstart/**/*
     stages:
       - Commit:
           jobs:
