--- a/webapp-quickstart/gradle.properties
+++ b/webapp-quickstart/gradle.properties
@@ -1,4 +1,4 @@
-key_path=C:/Users/Administrator/key/jindevops.pem
+key_path=/home/go/jindevops.pem
 tomcat_webapps=/opt/tomcat/webapps
 war_path=build/libs
 war_name=webapp-quickstart
