webapp-quickstart added to path

--- a/webapp-quickstart/gradle.properties
+++ b/webapp-quickstart/gradle.properties
@@ -1,6 +1,6 @@
 key_path=/home/go/jindevops.pem
 tomcat_webapps=/opt/tomcat/webapps
-war_path=build/libs
+war_path=webapp-quickstart/build/libs
 war_name=webapp-quickstart
 dev_server=
 user_server=ubuntu
