GoCd test added

--- a/webapp-quickstart/build.gradle
+++ b/webapp-quickstart/build.gradle
@@ -18,6 +18,7 @@ repositories {
 dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '1.4'
     compile group: 'log4j', name: 'log4j', version: '1.2.15', ext: 'jar'
+    testCompile 'junit:junit:4.12'
 }
 
 gretty {
