--- a/GoCD/webapp.gocd.yaml
+++ b/GoCD/webapp.gocd.yaml
@@ -77,6 +77,26 @@ pipelines:
                 - build:
                     source: webapp-quickstart/build/libs/*.war
                     destination: war
+      - Test:
+          jobs:
+            Unit_Test:
+              tasks:
+                - exec:
+                    command: ./webapp-quickstart/gradlew
+                    arguments: 
+                      - clean
+                      - tests
+                      - -p
+                      - webapp-quickstart                 
+              artifacts:
+                - build:
+                    source: webapp-quickstart/build/reports/tests/test/**/*
+                    destination: html
+                - test:
+                    source: webapp-quickstart/build/test-results/test/*.xml
+                    destination: xml                    
+              tabs:
+                unit_test: html/index.html
       - Deploy:
           jobs:
             Application:
