--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -34,4 +34,15 @@ Vagrant.configure('2') do |config|
         override.vm.synced_folder '.', '/vagrant', disabled: true
       end
     end
+    config.vm.define 'server-3' do |s|
+    config.vm.provision "docker"
+      config.vm.provision :docker_compose, compose_version: '1.21.2'
+      s.vm.provider :openstack do |os, override|
+        os.tenant_name = ENV['OS_TENANT_NAME']
+        os.project_name = ENV['OS_PROJECT_NAME']
+        os.server_name = 'server-deploy-lab'
+        os.flavor = ENV['OS_FLAVOR']
+        override.vm.synced_folder '.', '/vagrant', disabled: true
+      end
+    end
 end
