--- a/webapp-quickstart/build.gradle
+++ b/webapp-quickstart/build.gradle
@@ -1,13 +1,7 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'org.akhikhl.gretty:gretty:2.0.0'
-    }
+plugins {
+  id "org.gretty" version "2.2.0"
+  id "org.sonarqube" version "2.6.2"
 }
-
-apply plugin: 'org.akhikhl.gretty'
 
 apply plugin: 'war'
 
