--- a/webapp-quickstart/deploy.gradle
+++ b/webapp-quickstart/deploy.gradle
@@ -14,6 +14,7 @@ task deploy {
   doLast {
     ssh.run {
       session(remotes.webServer) {
+        put from: "${war_path}/${war_name}.war", into: "/tmp/${war_name}.war"
         executeScript file('deploy-app.sh')
       }
     }
