--- a/GoCD/webapp.gocd.yaml
+++ b/GoCD/webapp.gocd.yaml
@@ -122,7 +122,8 @@ pipelines:
                       - deploy.gradle
                       - deploy
                       - -Pdev_server=10.28.109.116
-                      - -Pwar_path=war
+                      - -Pwar_path=war                      
+                      - -Pwar_name=webapp-quickstart
                       - -p
                       - webapp-quickstart
                       
