--- a/webapp-quickstart/gradle.properties
+++ b/webapp-quickstart/gradle.properties
@@ -1,7 +1,7 @@
 systemProp.sonar.host.url=http://10.28.135.52:9000
 key_path=/home/go/jindevops.pem
-tomcat_webapps=/opt/tomcat/webapps
+tomcat_webapps=
 war_path=
-war_name=webapp-quickstart
+war_name=
 dev_server=
 user_server=ubuntu
