updates in path

--- a/webapp-quickstart/deploy.gradle
+++ b/webapp-quickstart/deploy.gradle
@@ -14,7 +14,7 @@ task deploy {
   doLast {
     ssh.run {
       session(remotes.webServer) {
-        put from: "/opt/tomcat/webapps/webapp-quickstart.war", into: "/tmp/webapp-quickstart.war"
+        put from: "${war_path}/${war_name}.war", into: "/tmp/${war_name}.war"        
         executeScript file('deploy-app.sh')
       }
     }
