--- a/webapp-quickstart/Jenkinsfile
+++ b/webapp-quickstart/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
         stage('Deploy') {
             steps {
                 echo 'Deploy..'
-                sh'./webapp-quickstart/gradlew -b deploy.gradle deploy -Pdev_server=10.28.109.116 -Pwar_path=war -Pwar_name=webapp-quickstart -p webapp-quickstart/'
+                sh'./webapp-quickstart/gradlew -b deploy.gradle deploy -Pdev_server=10.28.109.116 -Pwar_path=war -Pwar_name=webapp-quickstart -Pkey_path_jen=/home/jindevops.pem -p webapp-quickstart/'
             }
         }          
     }
